--- a/Starter/North America.html
+++ b/Starter/North America.html
@@ -22,9 +22,6 @@
   <!-- Link to your CSS file -->
   <link rel="stylesheet" href="css/style.css">
 
-</head>
-<style>
-	
 </style>
 </head>
 </body>
@@ -41,19 +38,24 @@
 
     </ul>
     </nav>
-
+    
 </body>
 
-</html>
-
 <body>
-	<video src="Video/MainPageBanner.mp4" width="1513" controls autoplay muted padding: 0></video>
+	<img src="Images/NorthAmerica.png" alt="North America">
 	
-	<h1 class="myHeader">Begin your Culinary Journey</h1>
+	<h1 class="myHeader">Ingredients</h1>
 
-		<p>Welcome to our culinary journey, where we explore the rich tapestry of food—the fundamental cornerstone of human existence! Dive into a world of delectable recipes that celebrate flavors from every corner of the globe, while uncovering the fascinating histories that shape our meals. Discover fun facts that reveal the cultural significance of ingredients, cooking techniques, and dining traditions. Whether you're a seasoned chef or a curious foodie, join us in savoring the stories and tastes that connect us all through the universal language of food!</p>
 
-		<a href="https://www.localfarmfinder.com/"><img src="images/localfarmers.png" alt="local farmers near me" padding:0></a>
+  <p>North America boasts a rich variety of ingredients that reflect its diverse landscapes and cultures. Here are some notable ones:</p>
+
+
+  <ul>
+  <li><a href="https://www.fieldmuseum.org/blog/amazing-journey-maize">Corn(Maize)</a>: A staple in many cuisines, used for tortillas, polenta, and cornbread</li>
+  <li></li>
+</ul>
+
+<img src="Images/Maize.png" alt="Maize">
 
 </body>
 
