--- a/Starter/Home.html
+++ b/Starter/Home.html
@@ -30,7 +30,7 @@
 </body>
 <nav>
 	<ul>
-		<li><a href="Home.html">Home</a></li>
+		<li><a href="index.html">Home</a></li>
 		<li><a href="NorthAmerica.html">North America</a></li>
 		<li><a href="">South America</a></li>
 		<li><a href="">Antartica</a></li>
