--- a/Starter/Home.html
+++ b/Starter/Home.html
@@ -53,7 +53,7 @@
 
 		<p>Welcome to our culinary journey, where we explore the rich tapestry of food—the fundamental cornerstone of human existence! Dive into a world of delectable recipes that celebrate flavors from every corner of the globe, while uncovering the fascinating histories that shape our meals. Discover fun facts that reveal the cultural significance of ingredients, cooking techniques, and dining traditions. Whether you're a seasoned chef or a curious foodie, join us in savoring the stories and tastes that connect us all through the universal language of food!</p>
 
-		<a href="https://www.localfarmfinder.com/"><img src="images/localfarmers.png" alt="local farmers near me" padding:0></a>
+		<a href="https://www.localfarmfinder.com/"><img src="Images/localfarmers.png" alt="local farmers near me" padding:0></a>
 
 </body>
 
