--- a/EXAM3/Story.html
+++ b/EXAM3/Story.html
@@ -6,6 +6,28 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!--META DATA-->
+<!-- HTML Meta Tags -->
+<title>West Hyattsville Green Alley</title>
+<meta name="description" content="The City of Hyattsville, in partnership with the Neighborhood Design Center (NDC), initiated the design of an improvement project in West Hyattsville Green Alley, aiming at revitalizing the alley behind the Queens Chapel Town Center.">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://danna1999.github.io/J352/EXAM3/Story.html">
+<meta property="og:type" content="website">
+<meta property="og:title" content="West Hyattsville Green Alley">
+<meta property="og:description" content="The City of Hyattsville, in partnership with the Neighborhood Design Center (NDC), initiated the design of an improvement project in West Hyattsville Green Alley, aiming at revitalizing the alley behind the Queens Chapel Town Center.">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/eb02b6db-b63a-4481-a197-8c8aef0b2136.png?token=OTNLfBlyB0Ov7iV-m5qoN9t1YFvqqk2c5nI3Qb6vdOM&height=1080&width=1080&expires=33269441575">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="danna1999.github.io">
+<meta property="twitter:url" content="https://danna1999.github.io/J352/EXAM3/Story.html">
+<meta name="twitter:title" content="West Hyattsville Green Alley">
+<meta name="twitter:description" content="The City of Hyattsville, in partnership with the Neighborhood Design Center (NDC), initiated the design of an improvement project in West Hyattsville Green Alley, aiming at revitalizing the alley behind the Queens Chapel Town Center.">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/eb02b6db-b63a-4481-a197-8c8aef0b2136.png?token=OTNLfBlyB0Ov7iV-m5qoN9t1YFvqqk2c5nI3Qb6vdOM&height=1080&width=1080&expires=33269441575">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
 <!--TITLE TAG-->
 <title>West Hyattsville Green Alley</title>
 <link rel="stylesheet" href="css/foundation.css">
@@ -26,7 +48,7 @@
       </div>
 
       <nav>
-        <a href="https://www.hyattsville.org/DocumentCenter/View/8205/English-2024-03-HH-slides">West Hyattsville Green Alley Visioning & Concept</a>
+        <a href="https://www.hyattsville.org/DocumentCenter/View/8205/English-2024-03-HH-slides" target="_blank">West Hyattsville Green Alley Visioning & Concept</a>
       </nav>
 
     </div>
@@ -44,7 +66,7 @@
 
 <p>By Danna Matheus, University of Maryland Journalism Student</p>
 
-<p>The City of Hyattsville, in partnership with the <a href="https://ndc-md.org/">Neighborhood Design Center (NDC),</a> is actively shaping the future of the West Hyattsville Green Alley, an initiative aimed at revitalizing the alley behind the Queens Chapel Town Center.</p>
+<p>The City of Hyattsville, in partnership with the <a href="https://ndc-md.org/" target="_blank">Neighborhood Design Center (NDC),</a> is actively shaping the future of the West Hyattsville Green Alley, an initiative aimed at revitalizing the alley behind the Queens Chapel Town Center.</p>
 
 
 <p>In early 2024, the City of Hyattsville held two important community engagement events. The first, a Race & Equity Listening Session on Jan. 13, focused on gathering input from community members about how the Green Alley project could be developed in relation to equity. This session was an opportunity for local residents to share their thoughts on how the design could address community concerns, promote inclusivity, and ensure that improvements benefit all stakeholders.</p>
@@ -71,18 +93,14 @@
 
 <p><strong>The concept design was presented to the Council on Oct. 21 and was approved on Dec.2.</strong></p>
 
-<p>For more information on the project and to provide feedback, residents can visit the City's official website or participate in ongoing surveys through the <a href="https://hellohyattsville.com/en/projects/west-hyattsville-green-alley">HelloHyattsville platform.</a></p>
-</div>
-</div>
+<p>For more information on the project and to provide feedback, residents can visit the City's official website or participate in ongoing surveys through the <a href="https://hellohyattsville.com/en/projects/west-hyattsville-green-alley" target="_blank">HelloHyattsville platform.</a></p>
 </div>
 
-<div class="content-area">
-<div class="grid-x grid-margin-x grid-padding-x">
-<div class="large-6 medium-6 small-6 cell headerBox">
-<img src="img/UTC2.jpg">
-<p> Photo by Danna Matheus of the University Town Center</p>
-<img src="img/UTC1.jpg">
-<p> Photo by Danna Matheus of the University Town Center</p>
+<div class="large-6 medium-6 small-6 cell">
+<img src="img/UTC2.jpg" style="max-width: 400px;">
+<p><strong>Photo by Danna Matheus of the University Town Center</strong></p>
+<img src="img/UTC1.jpg" style="max-width: 400px;">
+<p><strong>Photo by Danna Matheus of the University Town Center</strong></p>
 </div>
 </div>
 </div>
@@ -90,17 +108,10 @@
 <div class="content-area">
 <div class="grid-x grid-margin-x grid-padding-x">
 <div class="large-12 medium-12 small-12 cell headerBox">
-<div id="googleMap" style="width:100%;height:400px;"> </div>
-<script>
-function myMap() {
-var mapProp= {
-  center:new google.maps.LatLng(51.508742,-0.120850),
-  zoom:5,
-};
-var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24817.852759762885!2d-76.9765279839297!3d38.964379458021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c6fc55432d07%3A0x81d25dc8922db6fa!2sHyattsville%2C%20MD!5e0!3m2!1sen!2sus!4v1733439958744!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+</div>
+</div>
 
 
 </body>
